JumpScript/tests/baselines/reference/unusedTypeParameterInFunction2.errors.txt
tests/cases/compiler/unusedTypeParameterInFunction2.jump(1,16): error TS6133: 'Y' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInFunction2.jump (1 errors) ====
    function f1<X, Y>() {
                   ~
!!! error TS6133: 'Y' is declared but its value is never read.
        var a: X;
        a;
    }